--- a/css/style.css
+++ b/css/style.css
@@ -9,18 +9,23 @@ body {
 h1 {
   color: white;
   text-align: center;
-  margin: 50px; }
+  margin: 100px;
+  font-size: 50px; }
+
+.box {
+  color: white;
+  font-size: 18px; }
+
+.btn {
+  border: 1px solid white;
+  border-radius: none;
+  background-color: #19B5FE;
+  width: 300px;
+  color: white;
+  margin: 10px; }
 
 .joke {
   margin-top: 100px;
   height: 50vh; }
-  .joke p {
-    font-family: "OpenSans", sans-serif;
-    margin-top: 75px;
-    font-size: 20px; }
-
-.footer {
-  background-color: #674172;
-  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
