--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,7 @@
 $fonts: "OpenSans", sans-serif
 $background-color: #19B5FE
 $header-color: #674172
+$font-color: white
 
 *
   margin: 0
@@ -11,18 +12,23 @@ body
   background-color: $background-color
 
 h1 
-  color: white
+  color: $font-color
   text-align: center
-  margin: 50px
+  margin: 100px
+  font-size: 50px
+
+.box
+  color: $font-color
+  font-size: 18px
+
+.btn 
+  border: 1px solid white
+  border-radius: none
+  background-color: $background-color
+  width: 300px
+  color: $font-color
+  margin: 10px
 
 .joke
   margin-top: 100px
   height: 50vh
-  p 
-    font-family: $fonts
-    margin-top: 75px
-    font-size: 20px
-
-.footer
-  background-color: $header-color
-  text-align: center
